refactor(server): 重构疗程券相关功能
重构疗程券模块，包括以下主要变更：
1. 新增CureTicketCreateDTO和CureTicketUpdateDTO用于创建和更新操作
2. 新增ServerCureTicketVO作为返回视图对象
3. 优化数据库查询逻辑，增加orgId过滤条件
4. 简化实体类结构，移除冗余字段和方法
5. 使用MapStruct进行DTO和实体类转换
6. 重构服务层实现，优化业务逻辑
7. 调整控制器接口，使用新的DTO和VO对象